# Mentora

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
apps/api/config/: authentication.py  celery.py  cors.py  settings.py  urls.py
apps/api/mentora/: __init__.py
apps/api/mentora/agent_runtime/: __init__.py  apps.py  context.py  contracts.py  course_agent_views.py  decorators.py  events.py  exceptions.py  loop.py  models.py  runtime.py  services.py  session.py  tasks.py  urls.py  views.py
apps/api/mentora/assessment/: __init__.py  apps.py  models.py  schemas.py  tasks.py  views.py
apps/api/mentora/common/: __init__.py  storage.py
apps/api/mentora/courses/: __init__.py  apps.py  models.py  schemas.py  scope_planning.py  serializers.py  views.py
apps/api/mentora/knowledge/: __init__.py  apps.py  asset_streaming.py  layout_converter.py  models.py  tasks.py  (+3 more)
apps/api/mentora_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/smartstudy/: __init__.py
apps/api/tests/: conftest.py  run_integration_tests.py  test_agent_loop.py  test_agent_prompts.py  test_agent_runtime.py  test_assessment_api.py  test_chunk_builder.py  test_column_reorder.py  test_course_api_regressions.py  test_db_smoke.py  test_embedding_provider.py  test_embedding_tasks.py  test_evidence.py  test_health.py  test_http_client.py  test_knowledge_library_api.py  test_locator.py  test_model_gateway.py  test_parsing_api.py  test_pymupdf_adapter.py  test_rate_limit.py  test_retrieval_models.py  test_retrieval_search_async.py  test_retrieval_views.py  test_search_vector.py  test_sentence_splitter.py  test_table_extraction.py  test_upload_smoke.py
(+553 files in other folders)
