[project]
name = "mentora-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0,<6",
  "djangorestframework>=3.15,<4",
  "celery[redis]>=5.4,<6",
  "psycopg[binary]>=3.2,<4",
  "pgvector>=0.3,<1",
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-django>=4.10,<5",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "mentora*"]
